--- a/230077_Tugas4_PrakAI.ipynb
+++ b/230077_Tugas4_PrakAI.ipynb
@@ -18,7 +18,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "zyn2jCG_yk99"
       },
@@ -62,7 +62,7 @@
       "metadata": {
         "id": "y-utqe0Qy8oX"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -112,7 +112,7 @@
         "id": "vzeMMj42zI8L",
         "outputId": "bd0e8c07-817e-4e21-83fa-6f60c75b2d7c"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,7 +149,7 @@
         "    Conv2D(128, (3, 3), activation='relu'),\n",
         "    MaxPooling2D(2, 2),\n",
         "\n",
-        "    Dropout(0.5),\n",
+        "    Dropout(0.2),\n",
         "    Flatten(),\n",
         "    Dense(512, activation='relu'),\n",
         "    Dense(1, activation='sigmoid')  # DO NOT CHANGE THIS LINE!\n",
@@ -158,7 +158,7 @@
       "metadata": {
         "id": "clu5RrsFzMeU"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -199,44 +199,38 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wy3RYK36zVbI",
-        "outputId": "bb269565-9019-46ba-e070-aaa700b412d6"
+        "outputId": "0ba00d98-acae-4b2b-ea2b-18f051ef72b5"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/15\n",
-            "\u001b[1m33/33\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m17s\u001b[0m 425ms/step - accuracy: 0.5285 - loss: 0.7935 - val_accuracy: 0.5000 - val_loss: 0.9191\n",
+            "\u001b[1m33/33\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m18s\u001b[0m 427ms/step - accuracy: 0.9425 - loss: 0.1638 - val_accuracy: 0.8438 - val_loss: 0.8836\n",
             "Epoch 2/15\n",
-            "\u001b[1m33/33\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 351ms/step - accuracy: 0.7673 - loss: 0.4697 - val_accuracy: 0.7031 - val_loss: 1.1017\n",
+            "\u001b[1m33/33\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 355ms/step - accuracy: 0.9467 - loss: 0.1598 - val_accuracy: 0.7188 - val_loss: 1.6936\n",
             "Epoch 3/15\n",
-            "\u001b[1m33/33\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 352ms/step - accuracy: 0.8650 - loss: 0.3406 - val_accuracy: 0.6484 - val_loss: 2.0487\n",
+            "\u001b[1m33/33\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 358ms/step - accuracy: 0.9780 - loss: 0.0710 - val_accuracy: 0.6719 - val_loss: 4.6900\n",
             "Epoch 4/15\n",
-            "\u001b[1m33/33\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 349ms/step - accuracy: 0.9271 - loss: 0.2184 - val_accuracy: 0.8164 - val_loss: 1.2166\n",
+            "\u001b[1m33/33\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 355ms/step - accuracy: 0.9801 - loss: 0.0669 - val_accuracy: 0.6602 - val_loss: 5.3888\n",
             "Epoch 5/15\n",
-            "\u001b[1m33/33\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 349ms/step - accuracy: 0.8841 - loss: 0.2930 - val_accuracy: 0.6953 - val_loss: 2.2523\n",
+            "\u001b[1m33/33\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 347ms/step - accuracy: 0.9759 - loss: 0.0709 - val_accuracy: 0.6367 - val_loss: 4.2836\n",
             "Epoch 6/15\n",
-            "\u001b[1m33/33\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 347ms/step - accuracy: 0.9283 - loss: 0.1728 - val_accuracy: 0.6055 - val_loss: 4.2229\n",
+            "\u001b[1m33/33\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 346ms/step - accuracy: 0.9749 - loss: 0.0518 - val_accuracy: 0.7188 - val_loss: 3.9279\n",
             "Epoch 7/15\n",
-            "\u001b[1m33/33\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 351ms/step - accuracy: 0.9590 - loss: 0.1002 - val_accuracy: 0.5742 - val_loss: 2.8934\n",
+            "\u001b[1m33/33\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 347ms/step - accuracy: 0.9766 - loss: 0.0777 - val_accuracy: 0.7695 - val_loss: 2.6798\n",
             "Epoch 8/15\n",
-            "\u001b[1m33/33\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 344ms/step - accuracy: 0.9289 - loss: 0.1586 - val_accuracy: 0.6914 - val_loss: 2.8455\n",
+            "\u001b[1m33/33\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 351ms/step - accuracy: 0.9755 - loss: 0.0429 - val_accuracy: 0.6758 - val_loss: 6.4102\n",
             "Epoch 9/15\n",
-            "\u001b[1m33/33\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 326ms/step - accuracy: 0.9562 - loss: 0.1009 - val_accuracy: 0.5820 - val_loss: 5.7204\n",
+            "\u001b[1m33/33\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 349ms/step - accuracy: 0.9877 - loss: 0.0230 - val_accuracy: 0.6758 - val_loss: 5.7747\n",
             "Epoch 10/15\n",
-            "\u001b[1m33/33\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 332ms/step - accuracy: 0.9689 - loss: 0.0954 - val_accuracy: 0.6211 - val_loss: 5.1075\n",
+            "\u001b[1m33/33\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 340ms/step - accuracy: 0.9844 - loss: 0.0547 - val_accuracy: 0.7305 - val_loss: 5.8659\n",
             "Epoch 11/15\n",
-            "\u001b[1m33/33\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 348ms/step - accuracy: 0.9851 - loss: 0.0469 - val_accuracy: 0.6328 - val_loss: 5.7584\n",
-            "Epoch 12/15\n",
-            "\u001b[1m33/33\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 345ms/step - accuracy: 0.9731 - loss: 0.0655 - val_accuracy: 0.6484 - val_loss: 3.5791\n",
-            "Epoch 13/15\n",
-            "\u001b[1m33/33\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 346ms/step - accuracy: 0.9866 - loss: 0.0472 - val_accuracy: 0.6836 - val_loss: 4.1359\n",
-            "Epoch 14/15\n",
-            "\u001b[1m33/33\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 346ms/step - accuracy: 0.9861 - loss: 0.0272 - val_accuracy: 0.6211 - val_loss: 6.2725\n",
-            "Epoch 14: early stopping\n",
-            "Restoring model weights from the end of the best epoch: 4.\n"
+            "\u001b[1m33/33\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 322ms/step - accuracy: 0.9765 - loss: 0.0756 - val_accuracy: 0.7617 - val_loss: 2.6421\n",
+            "Epoch 11: early stopping\n",
+            "Restoring model weights from the end of the best epoch: 1.\n"
           ]
         }
       ]
@@ -255,12 +249,14 @@
         "\n",
         "# NEW: Get the best validation accuracy during training (what EarlyStopping saved)\n",
         "best_val_acc = max(val_acc)\n",
+        "best_acc = max(acc)\n",
         "best_epoch = val_acc.index(best_val_acc) + 1  # +1 because epochs start at 1\n",
         "\n",
         "print('\\nTraining Results:')\n",
         "print(f'Final Training Accuracy: {final_train_acc*100:.2f}%')\n",
         "print(f'Final Validation Accuracy: {final_val_acc*100:.2f}%')\n",
-        "print(f'\\nBest Validation Accuracy: {best_val_acc*100:.2f}% (epoch {best_epoch})')\n",
+        "print(f'\\nBest Accuracy: {best_acc*100:.2f}% (epoch {best_epoch})')\n",
+        "print(f'Best Validation Accuracy: {best_val_acc*100:.2f}% (epoch {best_epoch})')\n",
         "\n",
         "if best_val_acc > 0.83:\n",
         "    print(\"\\nModel mencapai target validation accuracy > 83%!\")\n",
@@ -273,9 +269,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XCkV_Fh__MlG",
-        "outputId": "7a412775-d821-423d-d5f0-64301d5d2634"
+        "outputId": "f1a09cb2-0b42-4670-c2ca-b4e95a64f0e5"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,13 +279,13 @@
           "text": [
             "\n",
             "Training Results:\n",
-            "Final Training Accuracy: 98.83%\n",
-            "Final Validation Accuracy: 62.11%\n",
+            "Final Training Accuracy: 97.18%\n",
+            "Final Validation Accuracy: 76.17%\n",
             "\n",
-            "Best Validation Accuracy: 81.64% (epoch 4)\n",
+            "Best Accuracy: 98.93% (epoch 1)\n",
+            "Best Validation Accuracy: 84.38% (epoch 1)\n",
             "\n",
-            "Model belum mencapai target. Rekomendasi:\n",
-            "- Tingkatkan jumlah epoch (misal: 20-25)\n"
+            "Model mencapai target validation accuracy > 83%!\n"
           ]
         }
       ]
@@ -313,9 +309,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "109ec27f-e396-4ad0-bad7-e4de0bd81352"
+        "outputId": "2cd14d93-3d84-422e-b223-d184aade3565"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -336,11 +332,11 @@
         "id": "UyaJclWJzaVF",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 17
+          "height": 34
         },
-        "outputId": "4a0931f8-63f1-4288-a6ac-db4387a06eba"
+        "outputId": "b3f84593-0253-4ce1-fa06-c1a156e2c9a0"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -401,7 +397,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_1e7777fd-7610-4190-b370-d61eb71af163\", \"model_05.h5\", 43055720)"
+              "download(\"download_d99fd3e8-5faf-4280-b617-92de073186ff\", \"model_05.h5\", 43055720)"
             ]
           },
           "metadata": {}
